Spacing on survey management and styling fixed (view encapsulation is set to none)

--- a/src/TRAISI/ClientApp/src/app/surveys-management/surveys-management.component.scss
+++ b/src/TRAISI/ClientApp/src/app/surveys-management/surveys-management.component.scss
@@ -1,4 +1,15 @@
-.custom-row
+.survey-management-table datatable-body-row, .survey-management-table datatable-body-cell
 {
-  height: 100px;
+  height: auto !important;
+  overflow: visible !important;
+  min-height: 45px !important;
+}
+
+.survey-management-table datatable-body
+{
+  padding-bottom: 120px;
+}
+
+.survey-management-table datatable-scroller{
+  width:100% !important;
 }
